# symspell_gpu

./: .gitignore  CMakeLists.txt  readme.md
src/: brute_force.cu  cli.cu  codec.cu  cub.cu  generate_combination.cu  kernel.cu  n_way_merge.cu  parser.cu  symspell.cu  symspell.h  util.cu
test/: test_brute_force.cu  test_cli.cpp  test_codec.cpp  test_cub.cu  test_generate_combination.cu  test_n_way_merge.cu  test_parser.cpp
test/sample/: input1.txt
